[package]
name = "rust-arduino-blink-interrupt"
version = "0.1.0"
authors = ["Jeroen Vlek <jeroen@perceptivebits.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-arduino-blink-interrupt"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.either]
version = "1.6.1"
default-features = false

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.3"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
